<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/container2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/container_main_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="11dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="161dp"
                            android:background="@drawable/img_background_block"
                            android:backgroundTint="#BEFFFFFF"
                            android:padding="11dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:id="@+id/profile_image"
                                        android:layout_width="100dp"
                                        android:layout_height="100dp"
                                        app:srcCompat="@drawable/ic_character" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/tv_email"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_margin="5dp"
                                        android:text="@string/email_ru"
                                        android:textColor="#000000"
                                        android:textSize="18sp" />

                                    <TextView
                                        android:id="@+id/tv_name_profile"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="5dp"
                                        android:text="@string/name"
                                        android:textColor="#000000"
                                        android:textSize="18sp" />

                                    <Button
                                        android:id="@+id/btn_logout"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="end|bottom"
                                        android:layout_margin="10dp"
                                        android:background="@drawable/btn_buttons"
                                        android:gravity="center"
                                        android:text="@string/logout"
                                        android:textColor="@color/colorWhite" />

                                </LinearLayout>

                            </LinearLayout>

                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_library"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/img_background_block"
                    android:backgroundTint="#BFFFFFFF"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageButton
                        android:id="@+id/books"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="30"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="Books"
                        android:onClick="onBook"
                        android:scaleType="center"
                        android:tag="Books"
                        android:tint="@color/black95"
                        app:layout_flexBasisPercent="@fraction/icon"
                        app:srcCompat="@drawable/ic_book" />

                    <ImageButton
                        android:id="@+id/houses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="30"
                        android:backgroundTint="#05FFFFFF"
                        android:onClick="onHouse"
                        android:scaleType="center"
                        android:tint="#00FFFFFF"
                        app:layout_flexBasisPercent="@fraction/icon"
                        app:srcCompat="@drawable/ic_img_coat_of_arms"
                        tools:visibility="visible" />

                    <ImageButton
                        android:id="@+id/characters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="30"
                        android:backgroundTint="#00FFFFFF"
                        android:onClick="onCharacter"
                        android:scaleType="center"
                        app:layout_flexBasisPercent="@fraction/icon"
                        app:srcCompat="@drawable/ic_character" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>